Operator architecture refactoring (#95)  * implemented reviewers' comments on version r2917.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2924 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Parameters.Views/3.3/HeuristicLab.Parameters.Views-3.3.csproj
+++ b/sources/HeuristicLab.Parameters.Views/3.3/HeuristicLab.Parameters.Views-3.3.csproj
@@ -91,6 +91,12 @@
     <Compile Include="ConstrainedValueParameterView.Designer.cs">
       <DependentUpon>ConstrainedValueParameterView.cs</DependentUpon>
     </Compile>
+    <Compile Include="OptionalConstrainedValueParameterView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="OptionalConstrainedValueParameterView.Designer.cs">
+      <DependentUpon>OptionalConstrainedValueParameterView.cs</DependentUpon>
+    </Compile>
     <Compile Include="OptionalValueParameterView.cs">
       <SubType>UserControl</SubType>
     </Compile>
