added parameters, corrected drag and drop position (ticket #867)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2934 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.ExtLibs/HeuristicLab.Netron/3.0.2672.12446/HeuristicLab.Netron-3.0.2672.12446/HeuristicLab.Netron-3.0.2672.12446.csproj
+++ b/sources/HeuristicLab.ExtLibs/HeuristicLab.Netron/3.0.2672.12446/HeuristicLab.Netron-3.0.2672.12446/HeuristicLab.Netron-3.0.2672.12446.csproj
@@ -81,6 +81,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExpandableIconMaterial.cs" />
     <Compile Include="NetronVisualization.cs">
       <SubType>Component</SubType>
     </Compile>
