--- a/sources/HeuristicLab.Operators.Views.GraphVisualization/3.3/HeuristicLab.Operators.Views.GraphVisualization-3.3.csproj
+++ b/sources/HeuristicLab.Operators.Views.GraphVisualization/3.3/HeuristicLab.Operators.Views.GraphVisualization-3.3.csproj
@@ -103,6 +103,7 @@
     <Compile Include="GraphVisualizationInfoView.Designer.cs">
       <DependentUpon>GraphVisualizationInfoView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\IOperatorShapeInfo.cs" />
     <Compile Include="Model\OperatorShapeInfo.cs" />
     <Compile Include="Model\GraphVisualizationInfo.cs" />
     <Compile Include="BidirectionalLookup.cs" />
@@ -161,6 +162,10 @@
     <ProjectReference Include="..\..\HeuristicLab.Parameters\3.3\HeuristicLab.Parameters-3.3.csproj">
       <Project>{56F9106A-079F-4C61-92F6-86A84C2D84B7}</Project>
       <Name>HeuristicLab.Parameters-3.3</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\HeuristicLab.Persistence\3.3\HeuristicLab.Persistence-3.3.csproj">
+      <Project>{102BC7D3-0EF9-439C-8F6D-96FF0FDB8E1B}</Project>
+      <Name>HeuristicLab.Persistence-3.3</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\HeuristicLab.PluginInfrastructure\HeuristicLab.PluginInfrastructure.csproj">
       <Project>{94186A6A-5176-4402-AE83-886557B53CCA}</Project>
