Added heuristic, local, random convex crossover and added some initial unit tests for all RealVector operators (#890)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2936 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Encodings.RealVector/3.3/HeuristicLab.Encodings.RealVector-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.RealVector/3.3/HeuristicLab.Encodings.RealVector-3.3.csproj
@@ -92,6 +92,9 @@
   <ItemGroup>
     <Compile Include="Crossovers\BlendAlphaCrossover.cs" />
     <Compile Include="Crossovers\DiscreteCrossover.cs" />
+    <Compile Include="Crossovers\HeuristicCrossover.cs" />
+    <Compile Include="Crossovers\LocalCrossover.cs" />
+    <Compile Include="Crossovers\RandomConvexCrossover.cs" />
     <Compile Include="Crossovers\SimulatedBinaryCrossover.cs" />
     <Compile Include="Crossovers\SinglePointCrossover.cs">
       <SubType>Code</SubType>
