--- a/sources/HeuristicLab.Persistence/UnitTests/HeuristicLab.Persistence.UnitTest.csproj
+++ b/sources/HeuristicLab.Persistence/UnitTests/HeuristicLab.Persistence.UnitTest.csproj
@@ -68,6 +68,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
