Operator architecture refactoring (#95)  * adapted test project of HeuristicLab.Persistence-3.3 according to other test projects
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2951 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.SGA/3.3/Tests/HeuristicLab.Algorithms.SGA-3.3.Tests.csproj
+++ b/sources/HeuristicLab.Algorithms.SGA/3.3/Tests/HeuristicLab.Algorithms.SGA-3.3.Tests.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{F42F3576-7233-4B28-90F7-36AE15F30F92}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HeuristicLab.Algorithms.SGA.Tests</RootNamespace>
+    <RootNamespace>HeuristicLab.Algorithms.SGA_33.Tests</RootNamespace>
     <AssemblyName>HeuristicLab.Algorithms.SGA-3.3.Tests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
