Updated real vector operators #890: Added AverageCrossover, UniformAllPositionsArithmeticCrossover, and UniformSomePositionsArithmeticCrossover Removed ContinuousCrossover, CompleteContinuousCrossover, and UniformAllPositionsManipulator Updated the description and documentation in HeuristicCrossover, LocalCrossover, and RandomConvexCrossover
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2964 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Encodings.RealVector/3.3/HeuristicLab.Encodings.RealVector-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.RealVector/3.3/HeuristicLab.Encodings.RealVector-3.3.csproj
@@ -90,6 +90,7 @@
     <Compile Include="RealVectorManipulator.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Crossovers\AverageCrossover.cs" />
     <Compile Include="Crossovers\BlendAlphaCrossover.cs" />
     <Compile Include="Crossovers\DiscreteCrossover.cs" />
     <Compile Include="Crossovers\HeuristicCrossover.cs" />
@@ -99,6 +100,8 @@
     <Compile Include="Crossovers\SinglePointCrossover.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Crossovers\UniformAllPositionsArithmeticCrossover.cs" />
+    <Compile Include="Crossovers\UniformSomePositionsArithmeticCrossover.cs" />
     <Compile Include="HeuristicLabEncodingsRealVectorPlugin.cs" />
     <Compile Include="Manipulators\PolynomialAllPositionManipulator.cs" />
     <Compile Include="Manipulators\MichalewiczNonUniformAllPositionsManipulator.cs">
