Provided public events in !ValueTypeArrayData and !ValueTypeMatrixData to notify, if an item has changed or the whole array/collection has been reset (#899)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2973 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Data.Views/3.3/HeuristicLab.Data.Views-3.3.csproj
+++ b/sources/HeuristicLab.Data.Views/3.3/HeuristicLab.Data.Views-3.3.csproj
@@ -97,6 +97,12 @@
     <Compile Include="ComparisonDataView.Designer.cs">
       <DependentUpon>ComparisonDataView.cs</DependentUpon>
     </Compile>
+    <Compile Include="StringConvertibleArrayDataView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="StringConvertibleArrayDataView.Designer.cs">
+      <DependentUpon>StringConvertibleArrayDataView.cs</DependentUpon>
+    </Compile>
     <Compile Include="StringConvertibleDataView.cs">
       <SubType>UserControl</SubType>
     </Compile>
