Worked on linkage between algorithms and problems (#898)  * finished TSP and started to work on SGA
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2975 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.SGA/3.3/HeuristicLab.Algorithms.SGA-3.3.csproj
+++ b/sources/HeuristicLab.Algorithms.SGA/3.3/HeuristicLab.Algorithms.SGA-3.3.csproj
@@ -82,7 +82,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HeuristicLabAlgorithmsSGAPlugin.cs" />
-    <Compile Include="SGA.cs" />
+    <Compile Include="SGA.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="SGAOperator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
