Moved linear scaling functionality out of tree evaluator into a separate operator. #823 (Implement tree evaluator with linear scaling to improve convergence in symbolic regression.)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2977 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <Compile Include="AnalyzerModel.cs" />
     <Compile Include="BestSolutionStorer.cs" />
+    <Compile Include="LinearScaler.cs" />
     <Compile Include="SimpleStableCorrelationCoefficientEvaluator.cs" />
     <Compile Include="SimplePearsonCorrelationCoefficientEvaluator.cs" />
     <Compile Include="SimpleSpearmansRankCorrelationCoefficientEvaluator.cs" />
