Added some (empty) classes for permutation moves #840
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2984 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Encodings.Permutation/3.3/HeuristicLab.Encodings.Permutation-3.3.csproj
+++ b/sources/HeuristicLab.Encodings.Permutation/3.3/HeuristicLab.Encodings.Permutation-3.3.csproj
@@ -103,6 +103,9 @@
     <Compile Include="Manipulators\Swap3Manipulator.cs" />
     <Compile Include="Manipulators\TranslocationInversionManipulator.cs" />
     <Compile Include="Manipulators\TranslocationManipulator.cs" />
+    <Compile Include="Moves\Permutation2IndexMove.cs" />
+    <Compile Include="Moves\Permutation2OptExhaustiveMoveGenerator.cs" />
+    <Compile Include="Moves\Permutation2OptMove.cs" />
     <Compile Include="PermutationManipulator.cs" />
     <Compile Include="PermutationCrossover.cs" />
     <Compile Include="Permutation.cs" />
