Worked on linkage between algorithms and problems (#898)  * restructured HeuristicLab.Problems.TSP project  * adapted TSP evaluators class hierarchy to avoid performance problems
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2988 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Problems.TSP/3.3/HeuristicLab.Problems.TSP-3.3.csproj
+++ b/sources/HeuristicLab.Problems.TSP/3.3/HeuristicLab.Problems.TSP-3.3.csproj
@@ -83,17 +83,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TSPCoordinatesPathEvaluator.cs" />
-    <Compile Include="ITSPDistanceMatrixPathEvaluator.cs" />
-    <Compile Include="ITSPCoordinatesPathEvaluator.cs" />
-    <Compile Include="ITSPPathEvaluator.cs" />
+    <Compile Include="Evaluators\TSPCoordinatesPathEvaluator.cs" />
+    <Compile Include="Evaluators\TSPDistanceMatrixPathEvaluator.cs" />
+    <Compile Include="Evaluators\TSPEvaluator.cs" />
+    <Compile Include="Evaluators\TSPRoundedEuclideanPathEvaluator.cs" />
+    <Compile Include="Interfaces\ITSPCoordinatesPathEvaluator.cs" />
+    <Compile Include="Interfaces\ITSPDistanceMatrixPathEvaluator.cs" />
+    <Compile Include="Interfaces\ITSPEvaluator.cs" />
+    <Compile Include="Interfaces\ITSPPathEvaluator.cs" />
     <Compile Include="HeuristicLabProblemsTSPPlugin.cs" />
-    <Compile Include="TSPEvaluator.cs" />
-    <Compile Include="ITSPEvaluator.cs" />
-    <Compile Include="TSPDistanceMatrixPathEvaluator.cs" />
     <Compile Include="TSPLIBParser.cs" />
-    <Compile Include="TSPRoundedEuclideanPathEvaluator.cs" />
-    <Compile Include="TSPPathEvaluator.cs" />
     <Compile Include="TSP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
