--- a/sources/HeuristicLab.Problems.TSP/3.3/HeuristicLab.Problems.TSP-3.3.csproj
+++ b/sources/HeuristicLab.Problems.TSP/3.3/HeuristicLab.Problems.TSP-3.3.csproj
@@ -92,6 +92,9 @@
     <Compile Include="Interfaces\ITSPEvaluator.cs" />
     <Compile Include="Interfaces\ITSPPathEvaluator.cs" />
     <Compile Include="HeuristicLabProblemsTSPPlugin.cs" />
+    <Compile Include="MoveEvaluators\TwoOptMoveTSPEvaluator.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="TSPLIBParser.cs" />
     <Compile Include="TSP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
