Add utility to test coverage of persistence support and storable consistency (#548)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3003 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence.GUI/3.3/HeuristicLab.Persistence.GUI-3.3.csproj
+++ b/sources/HeuristicLab.Persistence.GUI/3.3/HeuristicLab.Persistence.GUI-3.3.csproj
@@ -89,6 +89,7 @@
   <ItemGroup>
     <None Include="HeuristicLabPersistenceGUIPlugin.cs.frame" />
     <Compile Include="HeuristicLabPersistenceGUIPlugin.cs" />
+    <Compile Include="PersistenceAnalysis.cs" />
     <Compile Include="PersistenceConfigurationForm.cs">
       <SubType>Form</SubType>
     </Compile>
