add support for type information interleaving and subsequently true streaming (#548)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@3005 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
+++ b/sources/HeuristicLab.Persistence/3.3/HeuristicLab.Persistence-3.3.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Core\PrimitiveSerializerBase.cs" />
     <Compile Include="Core\FormatBase.cs" />
     <Compile Include="Auxiliary\TypeExtensions.cs" />
+    <Compile Include="Core\Tokens\TypeToken.cs" />
     <Compile Include="Core\TypeMapping.cs" />
     <Compile Include="Auxiliary\TypeName.cs" />
     <Compile Include="Core\GeneratorBase.cs" />
